--- a/config/harvest_with_ease-common.toml
+++ b/config/harvest_with_ease-common.toml
@@ -42,7 +42,7 @@
 	# The tier name is made of two parts: a namespace and a name.
 	# The namespace is an optional mod ID and defaults to "minecraft" if not specified. The name can be either the tier name, e.g. "iron" (this is not granted to work aside from Vanilla tiers) or the tier tag, e.g. "incorrect_for_iron_tool".
 	# Examples: "iron", "incorrect_for_iron_tool", "minecraft:iron", "minecraft:incorrect_for_iron_tool".
-	tiers = ["none", "kubejs:bronze", "iron", "gold", "kubejs:steel"]
+	tiers = ["none", "incorrect_for_stone_tool", "iron", "gold", "kubejs:steel"]
 	# Tool tier starting from which it is possible to harvest multiple crops at once.
 	# All tiers that cannot multi-harvest will have a 1x1 square area of effect (a single crop).
 	# If [starting harvest area size] is set to "single" and [area increment step] to "none" multi-harvest will be effectively disabled, regardless of this config option value.
@@ -51,7 +51,7 @@
 	# The tier name is made of two parts: a namespace and a name.
 	# The namespace is an optional mod ID and defaults to "minecraft" if not specified. The name can be either the tier name, e.g. "iron" (this is not granted to work aside from Vanilla tiers) or the tier tag, e.g. "incorrect_for_iron_tool".
 	# Examples: "iron", "incorrect_for_iron_tool", "minecraft:iron", "minecraft:incorrect_for_iron_tool".
-	"multi-harvest starting tier" = "kubejs:bronze"
+	"multi-harvest starting tier" = "incorrect_for_stone_tool"
 	# Starting multi-harvest area size (square side length).
 	# The area is always a square centered on the right-clicked crop.
 	# Setting this to "single" and [area increment step] to "none" will effectively disable multi-harvest.
