--- a/.packwizignore
+++ b/.packwizignore
@@ -1,4 +1,4 @@
 /default-options.txt
 /config/default-DistantHorizons.toml
-/options.txt.pw.toml
-/config/DistantHorizons.toml.pw.toml
+# /options.txt.pw.toml
+# /config/DistantHorizons.toml.pw.toml
