--- a/.packwizignore
+++ b/.packwizignore
@@ -1,4 +1,5 @@
 /default-options.txt
 /config/default-DistantHorizons.toml
+/config/sounds/default-chat.json
 # /options.txt.pw.toml
 # /config/DistantHorizons.toml.pw.toml
