--- a/config/carryon-common.toml
+++ b/config/carryon-common.toml
@@ -3,7 +3,7 @@
 	#Maximum distance from where Blocks and Entities can be picked up
 	# Default: 2.5
 	# Range: 0.0 ~ 1.7976931348623157E308
-	maxDistance = 2.5
+	maxDistance = 1.5
 	#Max width of entities that can be picked up in survival mode
 	# Default: 1.5
 	# Range: 0.0 ~ 10.0
@@ -11,7 +11,7 @@
 	#Max height of entities that can be picked up in survival mode
 	# Default: 2.5
 	# Range: 0.0 ~ 10.0
-	maxEntityHeight = 2.5
+	maxEntityHeight = 1.5
 	#Slowness multiplier for blocks
 	# Default: 1.0
 	# Range: 0.0 ~ 1.7976931348623157E308
@@ -27,7 +27,7 @@
 	#More complex Tile Entities slow down the player more
 	heavyTiles = true
 	#Allow all blocks to be picked up, not just Tile Entites. White/Blacklist will still be respected.
-	pickupAllBlocks = false
+	pickupAllBlocks = true
 	#Whether Blocks and Entities slow the creative player down when carried
 	slownessInCreative = false
 	#Whether hostile mobs should be able to picked up in survival mode
@@ -37,7 +37,7 @@
 	#Allow babies to be carried even when adult mob is blacklisted (or not whitelisted)
 	allowBabies = true
 	#Use Whitelist instead of Blacklist for Blocks
-	useWhitelistBlocks = false
+	useWhitelistBlocks = true
 	#Use Whitelist instead of Blacklist for Entities
 	useWhitelistEntities = false
 	#Use Whitelist instead of Blacklist for Stacking
@@ -72,7 +72,9 @@
 	#Entities that CAN be picked up (useWhitelistEntities must be true)
 	allowedEntities = []
 	#Blocks that CAN be picked up (useWhitelistBlocks must be true)
-	allowedBlocks = []
+	allowedBlocks = [
+		"#kubejs:carryon_whitelist"
+	]
 	#Entities that CAN have other entities stacked on top of them (useWhitelistStacking must be true)
 	allowedStacking = []
 
@@ -80,29 +82,6 @@
 	#Blacklist. Read about the format here: https://github.com/Tschipp/CarryOn/wiki/Black---and-Whitelist-Config
 	#Blocks that cannot be picked up
 	forbiddenTiles = [
-		"#forge:immovable", 
-		"#forge:relocation_not_supported", 
-		"#neoforge:immovable", 
-		"#neoforge:relocation_not_supported", 
-		"minecraft:end_portal", 
-		"minecraft:piston_head", 
-		"#c:relocation_not_supported", 
-		"minecraft:end_gateway", 
-		"minecraft:tall_grass", 
-		"minecraft:large_fern", 
-		"minecraft:peony", 
-		"minecraft:rose_bush", 
-		"minecraft:lilac", 
-		"minecraft:sunflower", 
-		"minecraft:*_bed", 
-		"minecraft:*_door", 
-		"minecraft:big_dripleaf_stem", 
-		"minecraft:waterlily", 
-		"minecraft:cake", 
-		"minecraft:nether_portal", 
-		"minecraft:tall_seagrass", 
-		"minecraft:candle_cake",
-		"#kubejs:carryon_blacklist"
 	]
 	#Entities that cannot be picked up
 	forbiddenEntities = [
@@ -121,7 +100,6 @@
 	]
 	#Entities that cannot have other entities stacked on top of them
 	forbiddenStacking = [
-		"minecraft:horse"
 	]
 
 [customPickupConditions]
