--- a/mods/explosive-enhancement-forge.pw.toml
+++ b/mods/explosive-enhancement-forge.pw.toml
@@ -2,6 +2,11 @@ name = "Explosive Enhancement: Reforged"
 filename = "explosiveenhancement-neoforge-1.21.1-1.1.1-client.jar"
 side = "client"
 
+[option]
+optional = true
+default = true
+description = "Makes the explosion animation look cooler"
+
 [download]
 url = "https://cdn.modrinth.com/data/r0camchr/versions/rO6whLy8/explosiveenhancement-neoforge-1.21.1-1.1.1-client.jar"
 hash-format = "sha512"
