--- a/mods/item-highlighter.pw.toml
+++ b/mods/item-highlighter.pw.toml
@@ -2,6 +2,11 @@ name = "Item Highlighter"
 filename = "Highlighter-1.21-neoforge-1.1.11.jar"
 side = "client"
 
+[option]
+optional = true
+default = true
+description = "Highlights newly picked-up items"
+
 [download]
 url = "https://cdn.modrinth.com/data/cVNW5lr6/versions/AsQ0Y2G9/Highlighter-1.21-neoforge-1.1.11.jar"
 hash-format = "sha512"
