--- a/mods/modelfix.pw.toml
+++ b/mods/modelfix.pw.toml
@@ -2,6 +2,11 @@ name = "Model Gap Fix"
 filename = "modelfix-1.21-1.10.jar"
 side = "client"
 
+[option]
+optional = true
+default = false
+description = "May fix transparent lines "
+
 [download]
 url = "https://cdn.modrinth.com/data/QdG47OkI/versions/X2U8ceG9/modelfix-1.21-1.10.jar"
 hash-format = "sha512"
