--- a/mods/minecraft-cursor.pw.toml
+++ b/mods/minecraft-cursor.pw.toml
@@ -2,6 +2,7 @@ name = "Minecraft Cursor"
 filename = "minecraft-cursor-neoforge-3.7.0+1.21.1.jar"
 side = "client"
 
+[option]
 optional = true
 default = true
 description = "Custom Cursor! A little janky rn"
